layout issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -525,7 +525,8 @@ header {
     margin: 10px; }
   .about-main p,
   .about-sof p {
-    text-indent: 0px; }
+    text-indent: 0px;
+    margin: 5px; }
 
 .connect-main h2,
 .connect-main ul,
