--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -68,6 +68,7 @@ header {
   }
   p {
     text-indent: 0px;
+    margin: 5px;
   }
 }
 
